<resources>
    <string name="app_name">E-Float</string>

    <string name="nil"></string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">DData</string>
    <string name="label_device_name">DName</string>
    <string name="label_device_address">DAddress</string>
    <string name="label_state">State:</string>

    <!-- String constants -->
    <string name="no_data">No data</string>
    <string name="select">SELECT</string>
    <string name="unselect">UNSELECT</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="select_device">Please select float</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="deployed">Deployed</string>
    <string name="tethered">Tethered</string>
    <string name="deploy">Deploy</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_undeploy">Undeploy</string>
</resources>
