<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item   android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item   android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    <item   android:id="@+id/menu_connect"
        android:title="@string/menu_connect"
        android:orderInCategory="102"
        app:showAsAction="ifRoom|withText"/>
    <item   android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="103"
        app:showAsAction="ifRoom|withText"/>
    <item   android:id="@+id/menu_undeploy"
        android:title="@string/menu_undeploy"
        android:orderInCategory="103"
        app:showAsAction="ifRoom|withText"/>

    <!--
    <item
        android:id="@+id/item1"
        android:title="about us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item2"
        android:title="Settings"
        android:icon="@drawable/ic_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item3"
        android:title="Help"
        android:icon="@drawable/ic_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item4"
        android:title="Feedback"
        android:icon="@drawable/ic_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item5"
        android:title="Close"
        android:icon="@drawable/ic_icon"
        app:showAsAction="never"/>
    <group /> -->

</menu>